--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100px;
-    background-color: darkgrey;
+    background-color: lightgrey;
 }
 
 .header_inline_block h1 {
@@ -22,4 +22,11 @@
     text-decoration: none;
     color: black;
     padding: 10px;
+}
+
+html body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
