--- a/public/css/header.css
+++ b/public/css/header.css
@@ -4,7 +4,7 @@
     align-items: center;
     width: 100%;
     height: 100px;
-    background-color: lightgrey;
+    background-color: grey;
 }
 
 .header_inline_block h1 {
