--- a/public/css/header.css
+++ b/public/css/header.css
@@ -36,3 +36,47 @@ html body{
     margin: 0px;
     padding: 0px;
 }
+
+@media screen and (orientation:landscape) and (max-width: 900px){
+    .header_inline_block {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        background-color: grey;
+    }
+    
+    .header_inline_block h1 {
+        display: inline-block;
+        margin-right: auto;
+        margin-left: 1%;
+        font-size: 100%;
+    }
+    
+    .header_inline_block nav ul li {
+        text-decoration: none;
+        display: inline-block;
+        list-style: none;
+    }
+    
+    .header_inline_block nav ul li:hover{
+        cursor: pointer;
+        opacity: 0.5;
+    }
+    
+    .header_inline_block a {
+        text-decoration: none;
+        color: black;
+        padding: 5%;
+        margin-right: 5%;
+        font-size: 40%;
+    }
+    
+    html body{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
+    
+}
