--- a/public/css/loading.css
+++ b/public/css/loading.css
@@ -7,12 +7,14 @@
     color: white;
     position: fixed;
     font-size: 1.5rem;
-    z-index: 3;
+    z-index: 100;
 }
 
 #loading.loaded {
     opacity: 0;
     pointer-events: none;
     z-index: auto;
+    width: 100%;
+    height: 100%;
 }
 
